--- a/In4B00king/confirmationscreen.ui
+++ b/In4B00king/confirmationscreen.ui
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>60</y>
+     <y>90</y>
      <width>81</width>
      <height>51</height>
     </rect>
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>80</y>
+     <y>110</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -50,6 +50,32 @@
    </property>
    <property name="text">
     <string>Confirm</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="hall">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>70</y>
+     <width>55</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>NIL</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="slabel_2">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>50</y>
+     <width>81</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Hall:</string>
    </property>
   </widget>
  </widget>
